@@ -23,11 +23,12 @@ public class CorsConfig {
         config.setAllowCredentials(true);
 
         // Allow React frontend origins
-//        config.setAllowedOrigins(Arrays.asList(
-//                "http://localhost:3001",
-//                "https://route-navigator.vercel.app"
-//        ));
-        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3001",
+                "https://route-navigator.vercel.app",
+                "https://dev-bi-ai-location.viettel.vn"
+        ));
+//        config.setAllowedOriginPatterns(List.of("*"));
 
         // Allow all HTTP methods
         config.setAllowedMethods(Arrays.asList(
